PDFToImage，基于Docnet.Core，有一点Bug，优化后速度很快。

--- a/docs/开发说明.md
+++ b/docs/开发说明.md
@@ -21,6 +21,7 @@ dotnet add package PDFtoImage # 用于PDF转图像的类库
 ## 测试类库
 
 ### PDF2ImageTest
+
 ```bash
 cd test
 dotnet new console -n PDF2ImageTest -f net8.0
@@ -29,9 +30,35 @@ cd PDF2ImageTest
 cd G:\Code\PDFTools\src
 dotnet add test\PDF2ImageTest reference PDFTools
 dotnet add . reference ..\PDFTools
+
 dotnet build
 
 # 发布 Windows 版本，不含.NET 运行时
 dotnet publish -c Release -r win-x64 --no-self-contained
 ```
 [PDF2ImageTest测试说明文件](src\test\PDF2ImageTest\README.md)
+
+### PDFToImage 
+
+一个基于 Docnet.Core + ImageSharp 的跨平台 PDF 批量转图片工具，支持自定义分辨率（DPI）、图片格式（png/jpg/bmp）、输出目录、自动分文件夹归档。
+
+PS：20250722 Bug
+- PDFToImage转换后的部分图片有黑边
+- dpi得设置到3000图片才能显示看清楚，设置为300时图片没法看
+- 先放弃PDFToImage方案
+
+```bash
+dotnet new console -n PDFToImage -f net8.0 
+cd PDFToImage
+# 添加依赖
+dotnet add package Docnet.Core
+dotnet add package SixLabors.ImageSharp
+
+dotnet build
+# 发布 Windows 版本，不含.NET 运行时
+dotnet publish -c Release -r win-x64 --no-self-contained
+
+cd bin\Debug\net8.0
+dotnet run "D:\Test\Inputs\sample.pdf" "D:\Test\Outputs"
+dotnet run "D:\Test\Inputs\sample.pdf" "D:\Test\Outputs" --dpi 3000 --format jpg --concurrency 2
+```
