--- a/docs/开发说明.md
+++ b/docs/开发说明.md
@@ -13,9 +13,9 @@ cd PDFTools
 dotnet add package PDFtoImage # 用于PDF转图像的类库
 ```
 
-## 设计 `PDFTools.Convert` 命名空间和 `Pdf2Image` 类
+## 设计 `PDFTools.Core` 命名空间和 `Pdf2Image` 类
 
-- 在 `PDFTools` 项目中，创建 `Convert` 文件夹，并在其中创建 `PdfToImage.cs` 文件
+- 在 `PDFTools` 项目中，创建 `Core` 文件夹，并在其中创建 `PdfToImage.cs` 文件
 
 
 ## 测试类库
