--- a/docs/开发说明.md
+++ b/docs/开发说明.md
@@ -55,6 +55,9 @@ dotnet add package Docnet.Core
 dotnet add package SixLabors.ImageSharp
 
 dotnet build
+# 只编译win-x64
+dotnet build -p:Platform=x64 -r win-x64
+
 # 发布 Windows 版本，不含.NET 运行时
 dotnet publish -c Release -r win-x64 --no-self-contained
 
