--- a/docs/开发说明.md
+++ b/docs/开发说明.md
@@ -65,3 +65,33 @@ cd bin\Debug\net8.0
 dotnet run "D:\Test\Inputs\sample.pdf" "D:\Test\Outputs"
 dotnet run "D:\Test\Inputs\sample.pdf" "D:\Test\Outputs" --dpi 3000 --format jpg --concurrency 2
 ```
+
+## AIClient
+
+### 开发测试代码
+```bash
+dotnet new console -n AIClient
+cd AIClient
+dotnet build
+dotnet run "http://localhost:8080/api/v1/generate" "请将以下文本翻译成英语：" "你好，我的祖国是中国！" "gpt-4o"
+
+```
+### 扩展建议
+
+1. **添加配置文件支持**：
+   - 将常用参数保存到配置文件中
+   - 支持环境变量存储API密钥
+
+2. **增加超时设置**：
+   ```csharp
+   // 在AIGenerateClient构造函数中
+   _httpClient.Timeout = TimeSpan.FromSeconds(timeoutInSeconds);
+   ```
+
+3. **支持批量处理**：
+   - 从文件读取多个文本进行处理
+   - 并行发送多个请求
+
+4. **添加日志系统**：
+   - 记录请求和响应到文件
+   - 支持不同的日志级别
